Fix horizontal scrollbar and max-height

--- a/css/nanny.css
+++ b/css/nanny.css
@@ -15,9 +15,10 @@
 .children i{
 	margin-top: 10%;
 }
-.container-completed{
-	max-height: 360px;
+.container-completed-action{
+	max-height: 245px;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 .relative{
 	position: relative;
